RESOLVED FIXED79607
REGRESSION (WebKit2): Non-activating links sometimes don’t work
https://bugs.webkit.org/show_bug.cgi?id=79607
Summary REGRESSION (WebKit2): Non-activating links sometimes don’t work
mitz
Reported 2012-02-26 13:19:14 PST
<rdar://problem/9557598> Trying to drag the selection out of a WKView in a background window often activates the window if the document WKView is scrolled.
Attachments
Convert points to frame coordinates before hit-testing (13.19 KB, patch)
2012-02-26 13:31 PST, mitz
adele: review+
webkit.review.bot: commit-queue-
mitz
Comment 1 2012-02-26 13:31:00 PST
Created attachment 128926 [details] Convert points to frame coordinates before hit-testing
WebKit Review Bot
Comment 2 2012-02-26 14:22:06 PST
Comment on attachment 128926 [details] Convert points to frame coordinates before hit-testing Attachment 128926 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11627789 New failing tests: inspector/protocol/console-agent.html
mitz
Comment 3 2012-02-27 10:01:47 PST
Note You need to log in before you can comment on or make changes to this bug.