Source/WebKit2: <rdar://problem/9557598> REGRESSION (WebKit2): Non-activating links sometimes don’t work https://bugs.webkit.org/show_bug.cgi?id=79607

Reviewed by Adele Peterson.

Test: TestWebKitAPI/Tests/mac/AcceptsFirstMouse.mm

This was caused by not mapping the mouse event coordinates from window coordinates to
document coordinates.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::performDictionaryLookupAtLocation): Convert the point to main frame
coordinates when performing the hit test.
(WebKit::WebPage::shouldDelayWindowOrderingEvent): Convert the point to the main or focused
frame coordinates when perfomring the hit test.
(WebKit::WebPage::acceptsFirstMouse): Ditto.

Tools: Added a test for <rdar://problem/9557598> REGRESSION (WebKit2): Non-activating links sometimes don’t work
https://bugs.webkit.org/show_bug.cgi?id=79607

Reviewed by Adele Peterson.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: Added new files.
* TestWebKitAPI/Tests/mac/AcceptsFirstMouse.mm: Added.
(TestWebKitAPI::AcceptsFirstMouse::url):
(TestWebKitAPI::AcceptsFirstMouse::didLoadURL):
(TestWebKitAPI::AcceptsFirstMouse::runTest):
(TestWebKitAPI::TEST_F):
* TestWebKitAPI/Tests/mac/acceptsFirstMouse.html: Added.



Canonical link: https://commits.webkit.org/96773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109004 268f45cc-cd09-0410-ab3c-d52691b4dbfc